package comportamiento.command;

public interface Command {
 void execute();
}
